--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
     "cSpell.words": [
         "ansible",
         "atlassian",
+        "cheatcheet",
         "cheatsheet",
+        "cicd",
+        "jrebel",
         "proxying"
     ]
 }
